--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,12 @@ jobs:
     - name: Install Packages
       run: npm install
     - name: Deploy to GH Pages
+      env:
+          GITHUB_TOKEN: ${{ secrets.social-dashboard-token }}
       run: |
         git config --global user.email "natthapong41@gmail.com"
         git config --global user.name "Natthapong Jiemjintanarom"
-        git remote set-url origin https://788eecadc0bac3176a6e394b62371d050892d67d@github.com/babe124578/social-dashboard.git
+        git remote set-url origin https://github.com/babe124578/social-dashboard.git
         npm run deploy
     - name: Updating Domain
       run: echo "Update domain"
