--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         git config --global user.email "natthapong41@gmail.com"
         git config --global user.name "Natthapong Jiemjintanarom"
-        git remote set-url origin git@github.com:babe124578/social-dashboard.git
+        git remote set-url origin https://github.com/babe124578/social-dashboard.git
         npm run deploy
     - name: Updating Domain
       run: echo "Update domain"
